src/objects/Guest_Pass__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Charges_to_Members_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill Charges to Member’s Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <label>Expiration</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Guest_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Guest Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Guest</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Guest_Passes1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Sponsor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member Sponsor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Guest_Passes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <label>Net Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Charges__c</fullName>
        <label>Total Charges</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Guest Pass</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GP-{00000}</displayFormat>
        <label>Guest Pass Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Passes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_Date_Cannot_be_Greater_Exp_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Start__c &gt; Expiration__c,true,false)</errorConditionFormula>
        <errorMessage>Expired Date should be Grater than Start Date</errorMessage>
    </validationRules>
</CustomObject>